--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
 
     <!-- Корректировка стиля. -->
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/main.css">
 
     <title>Доска объявлений №1 по продаже оргтехники</title>
@@ -132,8 +133,8 @@
                 <a href="#" class="profileimg">
                     <img src="/img/840px-Elon-musk-850.jpg" alt="Профиль">
                     <span>
-                    <i class="fa fa-circle"></i>
-                </span>
+                        <i class="fa fa-circle"></i>
+                    </span>
                 </a>
                 <a href="#" class="btn btn-danger">
                     Подать объявление
